[gd_scene load_steps=2 format=3 uid="uid://ug68ljbldsj5"]

[ext_resource type="Script" path="res://scenes/ui/dialogs/GridSpacingDialog/GridSpacingDialog.gd" id="1_5f4uy"]

[node name="GridSpacingDialog" type="Window"]
title = "Grid Spacing"
position = Vector2i(0, 36)
size = Vector2i(300, 100)
script = ExtResource("1_5f4uy")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "X"

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Y"

[node name="Label4" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Major Spacing:"

[node name="MajorX_SpinBox" type="SpinBox" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
suffix = "ft"

[node name="MajorY_SpinBox" type="SpinBox" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
suffix = "ft"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel
"

[node name="ApplyButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Apply
"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/GridContainer/MajorX_SpinBox" to="." method="_on_major_x_spin_box_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/GridContainer/MajorY_SpinBox" to="." method="_on_major_y_spin_box_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/ApplyButton" to="." method="_on_apply_button_pressed"]
